--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <p>I am a web designer & full stack Web developer. I'm interested in all kinds of visual communication,but my major focus is on designing web, mobile & tablet interfaces. I also have sills in other fields like branding, icon design or web development.</p> <br>
           <p>I enjoy turning complex problems into simple, beautiful and intuitive designs. When I'm not pushing pixels, you'll find me reading books, cooking or listening to music.</p>
           <div class="button">
-            <button class="resume"> <a href="./aakriti_negi.pdf" style="text-decoration: none;" >View Resume</a> </button>
+            <button class="resume"> <a href="./aakriti_negi.pdf" target="_blank" style="text-decoration: none;" >View Resume</a> </button>
           </div>
         </div>
       </div>
